maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:7: error: ')' expected but '<-' found.
  for (x <- 0 to getMondeLargeur()-1:y <- 1 to getMondeHauteur()-1) {
                                       ^ShortestPathMaze:7: error: ';' expected but ')' found.
  for (x <- 0 to getMondeLargeur()-1:y <- 1 to getMondeHauteur()-1) {
                                                                  ^ShortestPathMaze:21: error: ':' expected but ',' found.
def dirMinimale(x,y):Direction {
                 ^ShortestPathMaze:84: error: identifier expected but '}' found.
}
^